--- a/README
+++ b/README
@@ -1,3 +1,10 @@
-single FSK model
+Human ventricular myocyte action potential model with IKr facilitation component.
 
+K. H. W. J. ten Tusscher, D. Noble, P. J. Noble, and A. V. Panfilov.
+A model for human ventricular tissue.
+Am J Physiol Heart Circ Physiol 286: H1573–H1589, 2004.
+
+K. H. W. J. ten Tusscher and A. V. Panfilov.
+Alternans and spiral breakup in a human ventricular tissue model.
+Am J Physiol Heart Circ Physiol 291: H1088–H1100, 2006.
 
